src/objects/Interview_Schedule_Line__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Interview Schedule Lines</relationshipLabel>
        <relationshipName>Interview_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interview_Summary__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interview Summary</label>
        <referenceTo>Interview_Summary__c</referenceTo>
        <relationshipLabel>Interview Schedule Lines</relationshipLabel>
        <relationshipName>Interview_Schedule_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Interviewer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Interview_Schedule_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Interview Schedule Line</label>
    <nameField>
        <displayFormat>ISL-{000}</displayFormat>
        <label>Interview Schedule Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Schedule Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>